--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -62,6 +62,11 @@
 </div>
 {% endblock %}
 
+{% block section4 %}
+<div class="container">
+</div>
+{% endblock %}
+
 {% endblock %}
 
 {% block custom_footer_scripts %}
