insert time line

--- a/core/templates/oim_chart_bk.html
+++ b/core/templates/oim_chart_bk.html
@@ -243,7 +243,7 @@
                                 <tr class="info">
                                     <th>Rubros de ingresos</th>
                                     <th>Inicial</th>
-                                    {% if year != '2016' %}
+                                    background-{% if year != '2016' %}
                                         <th>Ejecutado</th>
                                         <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a></th>
                                     {% endif %}
