--- a/core/static/css/pe-icon-7-stroke.css
+++ b/core/static/css/pe-icon-7-stroke.css
@@ -483,6 +483,9 @@
 .pe-7s-graph:before {
 	content: "\e64e";
 }
+.pe-7s-bubble:before {
+	content: "\e616";
+}
 .pe-7s-global:before {
 	content: "\e64f";
 }
