--- a/core/static/css/timeline.css
+++ b/core/static/css/timeline.css
@@ -14,7 +14,7 @@
     margin-left: -1.5px;
 }
 .timeline > li {
-    margin-bottom: 20px;
+    margin-bottom: -10px;
     position: relative;
 }
 .timeline > li:before,
@@ -34,11 +34,11 @@
     clear: both;
 }
 .timeline > li > .timeline-panel {
-    width: 46%;
+    width: 42%;
     float: left;
     border: 1px solid #d4d4d4;
     border-radius: 2px;
-    padding: 20px;
+    padding: 12px;
     position: relative;
     -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
@@ -115,7 +115,7 @@
 }
 .timeline-title {
     margin-top: 0;
-    color: inherit;
+    color: #2085b3;
 }
 .timeline-body > p,
 .timeline-body > ul {
