--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -53,6 +53,15 @@
 </div>
 {% endblock %}
 
+<!--title historico -->
+{% block section5 %}
+{% endblock %}
+<!--info historica -->
+{% block section6 %}
+<div class="container">
+</div>
+{% endblock %}
+
 {% endblock %}
 
 {% block custom_footer_scripts %}
