start with fixed title bar

--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -317,3 +317,8 @@ footer .copyright {
 .chart-update .pma-icon {
     cursor: pointer;
 }
+
+/* Numeric data format, tables */
+.numeric_data, .tabular_data {
+    font-family: 'Roboto', sans-serif;
+}
