--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -106,7 +106,7 @@
         </div>
         <!-- /.info-box -->
     </div>
-    <div class="col-md-4 pma-fg-white">
+    <div class="col-md-4">
         <div class="info-box">
             <span class="info-box-icon pma-icon executed">
             </span>
