--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/pma-icon.css' %}">
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <!-- librerías opcionales que activan el soporte de HTML5 para IE8 -->
@@ -31,9 +32,10 @@
 <body>
     <!-- Header -->
     <header class="pma-gradient">
-    <nav class="navbar" role="navigation">
+    <nav class="navbar navbar-fixed-top" role="navigation">
         <!-- El logotipo y el icono que despliega el menú se agrupan
        para mostrarlos mejor en los dispositivos móviles -->
+        <div class="container ">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                 <span class="sr-only">Desplegar navegación</span>
@@ -100,6 +102,7 @@
                 <li><a href="#"><span class="glyphicon glyphicon-search"></span></a>
                 </li>
             </ul>
+        </div>
         </div>
     </nav>
     {% block header %}
