--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -32,7 +32,7 @@
 <body>
     <!-- Header -->
     <header class="pma-gradient">
-    <nav class="navbar navbar-fixed-top" role="navigation">
+    <nav class="navbar" role="navigation">
         <!-- El logotipo y el icono que despliega el menú se agrupan
        para mostrarlos mejor en los dispositivos móviles -->
         <div class="container ">
