--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -12,7 +12,27 @@
         <div class="container">
             <div class="row">
             <div class="col-md-12">
-                <p>Municipio,  Ano, Indicador</p>
+                <form method="GET" class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Año <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                        {% for ayear in year_list %}
+                          <li><a href="#" ref="{{ayear}}">{{ayear}}</a></li>
+                        {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Municipio <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                        {% for amunicipio in municipio_list %}
+                          <li><a href="#" ref="{{amunicipio.slug}}">{{amunicipio}}</a></li>
+                        {% endfor %}
+                        </ul>
+                    </div><!-- /btn-group -->
+                    <button type="submit" class="btn btn-default">Buscar</button>
+                </div><!-- /input-group -->
+                </form>
             </div>
             </div>
         </div>
