--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -90,5 +90,10 @@
 
 {% endblock %}
 
+{% block section7 %}
+<div class="container">
+</div>
+{% endblock %}
+
 {% block custom_footer_scripts %}
 {% endblock %}
